[gd_scene load_steps=14 format=3 uid="uid://r1okymmde6l8"]

[ext_resource type="Script" path="res://scenes/game/gameobjects/generator.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cpggf8tp1qgqv" path="res://assets/models/generator.glb" id="3_2qs2n"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="4_f2ult"]
[ext_resource type="Material" path="res://assets/materials/generator.tres" id="4_pmhs0"]
[ext_resource type="PackedScene" path="res://scenes/game/item/item_deposit/item_deposit.tscn" id="6"]
[ext_resource type="Resource" uid="uid://d1fjvdo0nh06v" path="res://scenes/game/item/items/bio_fuel.tres" id="7"]
[ext_resource type="Script" path="res://scenes/game/gameobjects/show_area_bounds.gd" id="9"]

[sub_resource type="BoxShape3D" id="1"]
resource_local_to_scene = true
size = Vector3(2.7, 3, 3)

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="7"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_147cu"]
_data = {
"RESET": SubResource("6"),
"fade_in": SubResource("7")
}

[sub_resource type="BoxShape3D" id="8"]
resource_local_to_scene = true
size = Vector3(4, 4, 4)

[sub_resource type="BoxShape3D" id="9"]
resource_local_to_scene = true
size = Vector3(2, 2, 2)

[node name="Generator" type="StaticBody3D" node_paths=PackedStringArray("prog_bar", "anim_player")]
collision_layer = 2
collision_mask = 8
script = ExtResource("1")
fuel_item_data = ExtResource("7")
prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.1)
shape = SubResource("1")

[node name="generator" parent="." instance=ExtResource("3_2qs2n")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)

[node name="obj-generator" parent="generator" index="0"]
surface_material_override/0 = ExtResource("4_pmhs0")

[node name="LoopSound" type="AudioStreamPlayer3D" parent="."]
bus = &"SoundFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("4_f2ult")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "generator
fuel with biofuel"

[node name="StatBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="1"]
visible = true

[node name="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar" index="0"]
text = "fuel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_147cu")
}

[node name="FuelConsumeTimer" type="Timer" parent="."]
one_shot = true

[node name="ItemDeposit" parent="." instance=ExtResource("6")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("8")

[node name="CheckForMachinesArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 10
script = ExtResource("9")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CheckForMachinesArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("9")

[connection signal="timeout" from="FuelConsumeTimer" to="." method="_on_FuelConsumeTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]

[editable path="generator"]
[editable path="CanvasLayer/HintObjectInterface"]
